[gd_scene load_steps=3 format=3 uid="uid://d1kxsgjuhlcsq"]

[ext_resource type="Script" path="res://components/player/trait_system/trait_display/trait_display.gd" id="1_35o4r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h6cxa"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="TraitDisplay" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_h6cxa")
script = ExtResource("1_35o4r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "[trait name]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[trait desc]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Prev" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Previous Trait"

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Trait"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Next" to="." method="_on_next_pressed"]
